quick actions for recruiters

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -1,6 +1,8 @@
 {
 	"android": "Android",
+	"ANDROID": "Android",
 	"angular": "Angular",
+	"ANGULAR": "Angular",
 	"ARCHITECT": "Softwarearchitekt",
 	"ARCHITECT_SHORT": "Architekt",
 	"arenella-accounts-menu-availability": "Verfügbarkeit",
@@ -181,7 +183,7 @@
 	"arenella-faqs-q11-answer-summary": "Sie können nach Kandidaten filtern, die die von Ihnen gesuchte Sprache sprechen.",
 	"arenella-faqs-q11-question": "Welche Sprachen sprechen die Kandidaten",
 	"arenella-homepage-candidates-1": "Kandidaten haben entweder ihren Lebenslauf auf die Website hochgeladen oder ihre Erlaubnis dazu gegeben, mit der Absicht, dass Personalvermittler sie kontaktieren. Unsere Kandidaten sind offen für die Zusammenarbeit mit Personalvermittlern und suchen aktiv über eine Personalvermittlungsagentur nach einer neuen Stelle.",
-	"arenella-homepage-candidates-2": "Wir überprüfen die Verfügbarkeit der Kandidaten etwa alle zwei Wochen, um die Verfügbarkeit anhand ihres LinkedIn-Status sicherzustellen. Nicht mehr verfügbare Kandidaten werden aus den Suchergebnissen entfernt. Ihr Status wird dann alle zwei Monate überprüft, um festzustellen, ob sie wieder verfügbar sind. Unser Ziel ist es, Ihren Aufwand für die Kontaktaufnahme mit Kandidaten zu reduzieren, die nicht aktiv nach einer Stelle suchen. IT-Recruiter mit einem kostenpflichtigen Abonnement haben auch die Möglichkeit, nicht verfügbare Kandidaten herauszufiltern und zu kontaktieren.",
+	"arenella-homepage-candidates-2": "Wir prüfen die Verfügbarkeit von Kandidaten etwa alle zwei Wochen, um die Verfügbarkeit anhand ihres LinkedIn-Status sicherzustellen. Nicht mehr verfügbare Kandidaten werden aus den Suchergebnissen entfernt. Ihr Status wird dann alle zwei Monate überprüft, um festzustellen, ob sie wieder verfügbar sind. Wir möchten Ihren Zeitaufwand für die Kontaktaufnahme mit Kandidaten reduzieren, die nicht aktiv nach einer Stelle suchen. IT-Recruiter mit einem kostenpflichtigen Abonnement haben außerdem die Möglichkeit, nicht verfügbare Kandidaten herauszufiltern und zu kontaktieren.",
 	"arenella-homepage-candidates-3": "Wir überprüfen die Verfügbarkeit der Kandidaten etwa alle zwei Wochen, um die Verfügbarkeit basierend auf ihrem LinkedIn-Status sicherzustellen. Sobald\nein Kandidat nicht mehr verfügbar ist, wird er aus den Suchergebnissen entfernt. Sein Status wird dann alle\nzwei Monate überprüft, um festzustellen, ob er verfügbar geworden ist. Unser Ziel ist es, den Aufwand zu reduzieren, den Sie für die Kontaktaufnahme mit Kandidaten aufwenden,\ndie nicht aktiv nach einer Stelle suchen.",
 	"arenella-homepage-candidates-4": "Die Kandidaten sind in ganz Europa ansässig und haben das Recht zu arbeiten. Es gibt Kandidaten für die meisten Arten von IT-Funktionen sowohl auf Festanstellungsbasis als auch auf freiberuflicher Basis.",
 	"arenella-homepage-fees-1": "Sie werden erfreut sein zu hören, dass für die Vermittlung eines Kandidaten keine zusätzlichen Margen oder Gebühren anfallen. Die einzige Zahlung ist das Jahresabonnement, falls Sie sich für eine kostenpflichtige statt einer kostenlosen, kreditbasierten Abonnementoption entscheiden.",
@@ -557,7 +559,7 @@
 	"arenella-recruiter-mp-your-candidates": "Ihre Kandidaten",
 	"arenella-recruiter-prof-box-contact-btn-send": "Schicken",
 	"arenella-recruiter-prof-box-contact-desc1": "",
-	"arenella-recruiter-prof-box-contact-desc2": "",
+	"arenella-recruiter-prof-box-contact-desc2": "Sie können eine Kopie Ihrer Nachricht und alle Antworten in Ihrem Posteingang anzeigen",
 	"arenella-recruiter-prof-box-contact-failed": "",
 	"arenella-recruiter-prof-box-contact-title": "Nachricht senden",
 	"arenella-recruiter-prof-box-contact-titleititle": "Titel",
@@ -722,7 +724,7 @@
 	"arenella-suggestions-profile-box-contact-hdr": "Nachricht an den Kandidaten",
 	"arenella-suggestions-profile-box-contact-msg-failed": "",
 	"arenella-suggestions-profile-box-contact-msg-success-1": "",
-	"arenella-suggestions-profile-box-contact-msg-success-2": "",
+	"arenella-suggestions-profile-box-contact-msg-success-2": "Sie können eine Kopie Ihrer Nachricht und alle Antworten in Ihrem Posteingang anzeigen",
 	"arenella-suggestions-profile-box-contact-title": "Titel",
 	"arenella-suggestions-profile-box-delete-hdr": "Löschen bestätigen",
 	"arenella-suggestions-profile-box-delete-msg": "Dieses Profil wird gelöscht und es ist nicht mehr möglich, auf die zugehörigen Daten zuzugreifen",
@@ -794,6 +796,7 @@
 	"EU_REMOTE": "Europa - Remote",
 	"EUROPE": "Europa",
 	"expres": "Expres",
+	"EXPRES": "Expres",
 	"failure": "Versagen",
 	"FINLAND": "Finnland",
 	"FINNISH": "Finnisch",
@@ -818,6 +821,7 @@
 	"GERMAN": "Deutsch",
 	"GERMANY": "Deutschland",
 	"go": "Go",
+	"GO": "Go",
 	"GREECE": "Griechenland",
 	"GREEK": "Griechisch",
 	"Hide": "Verstecken",
@@ -849,6 +853,7 @@
 	"info-item-title-to": " Zu ",
 	"info-item-title-years-experience": "",
 	"ios": "IOS",
+	"IOS": "Ios",
 	"IRELAND": "Irland",
 	"IT_RECRUITER": "IT-Recruiter",
 	"IT_RECRUITER_SHORT": "Rekrutierung",
@@ -885,7 +890,7 @@
 	"mp-left-mnu-requested-skills": "Fähigkeiten",
 	"mp-left-mnu-start-date": "Startdatum",
 	"NETHERLANDS": "Niederlande",
-	"NETWORK_ADMINISTRATOR": "Netzwerkadministrator",
+	"NETWORK_ADMINISTRATOR": "DevOps/SysOps",
 	"NETWORK_ADMINISTRATOR_SHORT": "DevOps",
 	"new-candidate-basic": "Basic",
 	"new-candidate-failure": "",
@@ -903,8 +908,10 @@
 	"newsfeed-na": "N / A",
 	"newsfeed-todays-candidates": "Die Kandidaten von heute",
 	"next": "Next",
+	"NEXT": "Next",
 	"no": "Nein",
 	"node": "Node",
+	"NODE": "Node",
 	"NORTH_AMERICA": "Nordamerika",
 	"NORTHERN_EUROPE": "Nordeuropa",
 	"NORTHERN_IRELAND": "Nordirland",
@@ -913,16 +920,24 @@
 	"ONE_MONTH_SUBSCRIPTION": "1 Monat",
 	"PAKISTAN": "Pakistan",
 	"php": "PHP",
+	"PHP": "Php",
 	"POLAND": "Polen",
 	"POLISH": "Polieren",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugiesisch",
 	"product-owner": "Product Owner",
+	"PRODUCT_OWNER": "Product Owner",
 	"PROJECT_MANAGER": "Projektmanager",
 	"PROJECT_MANAGER_SHORT": "PM",
 	"python": "Python",
+	"PYTHON": "Python",
 	"QA_SHORT": "QA",
+	"quick-action-text-gopro": "Keine Download-Limits – Mehr Kandidaten",
+	"quick-action-text-jobboard": "Machen Sie Kandidaten auf eine Stelle aufmerksam",
+	"quick-action-text-mp": "Machen Sie eine Stelle bei Personalvermittlern bekannt",
+	"quick-actions-title": "Schnellaktionen",
 	"react": "React",
+	"REACT": "React",
 	"rec-prof-country-belgium": "Belgien",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Irland",
@@ -960,16 +975,19 @@
 	"rec-prof-sector-police-and-defence": "Polizei und Verteidigung",
 	"rec-prof-type-freelance-contract": "Freiberuflich/Vertragsarbeit",
 	"rec-prof-type-permanent-payroll": "Festanstellung/Gehaltsabrechnung",
-	"register-recruiter-failure": "Leider ist ein Problem aufgetreten. Bitte senden Sie für Ihr Konto eine E-Mail direkt an kparkings@gmail.com",
+	"register-recruiter-failure": "Leider ist ein Problem aufgetreten. Bitte senden Sie für Ihr Konto eine E-Mail direkt an admin@arenella-ict",
 	"register-recruiter-failure-title": "Versagen",
 	"register-recruiter-success": "Ihre Anfrage wurde übermittelt. Nach der Annahme wird eine E-Mail mit Ihren Anmeldedaten gesendet.",
 	"register-recruiter-success-title": "Erfolg",
 	"REPUBLIC_OF_IRELAND": "Irland",
 	"ROMANIA": "Rumänien",
 	"ROMANIAN": "Rumänisch",
+	"RUBY": "Ruby",
 	"ruby-on-rails": "Ruby On Rails",
+	"RUBY_ON_RAILS": "Ruby On Rails",
 	"RUSSIAN": "Russisch",
 	"rust": "Rust",
+	"RUST": "Rust",
 	"saved-candidate-no-longer-available": "Kandidat nicht mehr verfügbar",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
@@ -1028,6 +1046,7 @@
 	"SWEDISH": "Schwedisch",
 	"SWITZERLAND": "Schweiz",
 	"test-manager": "Test Manager",
+	"TEST_MANAGER": "Test Manager",
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "",
 	"TURKEY": "Truthahn",
@@ -1041,6 +1060,7 @@
 	"URDU": "Urdu",
 	"US": "USA",
 	"vue": "Vue",
+	"VUE": "Vue",
 	"WEB_DEV": "Webentwickler",
 	"WEB_SHORT": "Web",
 	"WESTERN_EUROPE": "Westeuropa",
