--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -1,6 +1,8 @@
 {
 	"android": "Android",
+	"ANDROID": "Android",
 	"angular": "Angular",
+	"ANGULAR": "Angular",
 	"ARCHITECT": "Software Architect",
 	"ARCHITECT_SHORT": "Architect",
 	"arenella-accounts-menu-availability": "Availability",
@@ -181,7 +183,7 @@
 	"arenella-faqs-q11-answer-summary": "You can filter on candidates that speak the language you are looking for.",
 	"arenella-faqs-q11-question": "What languages do the candidates speak",
 	"arenella-homepage-candidates-1": "Candidates have either uploaded their CV to the site or have given permission for that to happen, with the\n\t\t\t\tintention of having recruiters contact them. Our candidates are open to working with recruiters and actively\n\t\t\t\tlooking for a new role via a recruitment agency.",
-	"arenella-homepage-candidates-2": "We check candidate availability roughly every two weeks to ensure availability based upon their LinkedIn status. Candidate no longer available are removed from the search results. Their status is then checked every two month to determine if they have become available again. We aim to reduce your spent contacting candidates that are not actively looking for a role. IT Recruiters with a paid subscription also have the option to filter on and contact the unavailable candidates.",
+	"arenella-homepage-candidates-2": "We check candidate availability roughly every two weeks to ensure availability based upon their LinkedIn status. Candidate no longer available are removed from the search results. Their status is then checked every two month to determine if they have become available again. We aim to reduce your time spent contacting candidates that are not actively looking for a role. IT Recruiters with a paid subscription also have the option to filter on and contact the unavailable candidates.",
 	"arenella-homepage-candidates-3": "We check candidate availability roughly every two weeks to ensure availability based upon their LinkedIn status. Once\na candidate is no longer available they are removed from the search results. Their status is then checked every\ntwo month to determines if they have become available. We aim to reduce the your spent contacting candidates\nthat are not actively looking for a role.",
 	"arenella-homepage-candidates-4": "Candidates are based throughout Europe and have the right to work. There are candidates for most types of IT function on both a permanent and freelance basis. ",
 	"arenella-homepage-fees-1": "You will be pleased to hear there are no additional margins or fees for placing a candidate. The only payment is the yearly subscription in the case you opt for a paid, rather than free credit based subscription option.",
@@ -280,7 +282,7 @@
 	"arenella-login-user-email": "Email:",
 	"arenella-login-user-email-sent": "Email Sent",
 	"arenella-login-user-forgotten-password": "Forgotten Password?",
-	"arenella-login-user-forgotten-password-text": "Please enter your email and click on 'Reset Password' and a new username and passsword will be emailed to you shortly",
+	"arenella-login-user-forgotten-password-text": "Please enter your email and click on 'Reset Password' and a new username and password will be emailed to you shortly",
 	"arenella-login-user-login": "Login",
 	"arenella-login-user-password": "Password",
 	"arenella-login-user-reset": "Reset",
@@ -794,6 +796,7 @@
 	"EU_REMOTE": "Europe - Remote",
 	"EUROPE": "Europe",
 	"expres": "Expres",
+	"EXPRES": "Expres",
 	"failure": "Failure",
 	"FINLAND": "Finland",
 	"FINNISH": "Finnish",
@@ -818,6 +821,7 @@
 	"GERMAN": "German",
 	"GERMANY": "Germany",
 	"go": "Go",
+	"GO": "Go",
 	"GREECE": "Greece",
 	"GREEK": "Greek",
 	"Hide": "Hide",
@@ -849,6 +853,7 @@
 	"info-item-title-to": " to ",
 	"info-item-title-years-experience": "Years Experience",
 	"ios": "IOS",
+	"IOS": "Ios",
 	"IRELAND": "Ireland",
 	"IT_RECRUITER": "IT Recruiter",
 	"IT_RECRUITER_SHORT": "Recruitment",
@@ -885,7 +890,7 @@
 	"mp-left-mnu-requested-skills": "Skills",
 	"mp-left-mnu-start-date": "Start Date",
 	"NETHERLANDS": "Netherlands",
-	"NETWORK_ADMINISTRATOR": "Network Administrator",
+	"NETWORK_ADMINISTRATOR": "DevOps/SysOps",
 	"NETWORK_ADMINISTRATOR_SHORT": "DevOps",
 	"new-candidate-basic": "Basic",
 	"new-candidate-failure": "Unable to add Candidate",
@@ -903,8 +908,10 @@
 	"newsfeed-na": "Na",
 	"newsfeed-todays-candidates": "Todays Candidates",
 	"next": "Next",
+	"NEXT": "Next",
 	"no": "No",
 	"node": "Node",
+	"NODE": "Node",
 	"NORTH_AMERICA": "North America",
 	"NORTHERN_EUROPE": "Northern Europe",
 	"NORTHERN_IRELAND": "Northern Ireland",
@@ -913,16 +920,24 @@
 	"ONE_MONTH_SUBSCRIPTION": "1 Month",
 	"PAKISTAN": "Pakistan",
 	"php": "PHP",
+	"PHP": "Php",
 	"POLAND": "Poland",
 	"POLISH": "Polish",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portuguese",
 	"product-owner": "Product Owner",
+	"PRODUCT_OWNER": "Product Owner",
 	"PROJECT_MANAGER": "Project Manager",
 	"PROJECT_MANAGER_SHORT": "PM",
 	"python": "Python",
+	"PYTHON": "Python",
 	"QA_SHORT": "QA",
+	"quick-action-text-gopro": "No limits - More Candidates",
+	"quick-action-text-jobboard": "Advertise a role to Candidates",
+	"quick-action-text-mp": "Advertise a role to Recruiters",
+	"quick-actions-title": "Quick Actions",
 	"react": "React",
+	"REACT": "React",
 	"rec-prof-country-belgium": "Belgium",
 	"rec-prof-country-europe": "Europe",
 	"rec-prof-country-ireland": "Ireland",
@@ -960,16 +975,19 @@
 	"rec-prof-sector-police-and-defence": "Police and Defence",
 	"rec-prof-type-freelance-contract": "Freelance/Contract",
 	"rec-prof-type-permanent-payroll": "Permanent/Payroll",
-	"register-recruiter-failure": "Unfortunately there was a problem. Please email kparkings@gmail.com directly for your account",
+	"register-recruiter-failure": "Unfortunately there was a problem. Please email admin@arenella-ict.com directly for your account",
 	"register-recruiter-failure-title": "Failure",
 	"register-recruiter-success": "Your request has been submitted. Once accepted an email will be sent with your login details.",
 	"register-recruiter-success-title": "Success",
 	"REPUBLIC_OF_IRELAND": "Ireland",
 	"ROMANIA": "Romania",
 	"ROMANIAN": "Romanian",
+	"RUBY": "Ruby",
 	"ruby-on-rails": "Ruby On Rails",
+	"RUBY_ON_RAILS": "Ruby On Rails",
 	"RUSSIAN": "Russian",
 	"rust": "Rust",
+	"RUST": "Rust",
 	"saved-candidate-no-longer-available": "Candidate No Longer Available",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
@@ -1028,6 +1046,7 @@
 	"SWEDISH": "Swedish",
 	"SWITZERLAND": "Switzerland",
 	"test-manager": "Test Manager",
+	"TEST_MANAGER": "Test Manager",
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 Months",
 	"TURKEY": "Turkey",
@@ -1041,6 +1060,7 @@
 	"URDU": "Urdu",
 	"US": "USA",
 	"vue": "Vue",
+	"VUE": "Vue",
 	"WEB_DEV": "Web Developer",
 	"WEB_SHORT": "Web",
 	"WESTERN_EUROPE": "Western Europe",
