--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -1,6 +1,8 @@
 {
 	"android": "Android",
+	"ANDROID": "Android",
 	"angular": "Angular",
+	"ANGULAR": "Angular",
 	"ARCHITECT": "Arquitecto de software",
 	"ARCHITECT_SHORT": "Arquitecto",
 	"arenella-accounts-menu-availability": "Disponibilidad",
@@ -181,7 +183,7 @@
 	"arenella-faqs-q11-answer-summary": "Puedes filtrar por candidatos que hablen el idioma que estás buscando.",
 	"arenella-faqs-q11-question": "¿Qué idiomas hablan los candidatos?",
 	"arenella-homepage-candidates-1": "Los candidatos han subido su CV al sitio o han dado su consentimiento para que esto suceda, con la\nintención de que los reclutadores se pongan en contacto con ellos. Nuestros candidatos están abiertos a trabajar con reclutadores y a buscar activamente\nun nuevo puesto a través de una agencia de contratación.",
-	"arenella-homepage-candidates-2": "Comprobamos la disponibilidad de los candidatos aproximadamente cada dos semanas para garantizar la disponibilidad en función de su estado en LinkedIn. Los candidatos que ya no están disponibles se eliminan de los resultados de búsqueda. Luego, se comprueba su estado cada dos meses para determinar si están disponibles nuevamente. Nuestro objetivo es reducir el tiempo que pasa contactando a candidatos que no están buscando activamente un puesto. Los reclutadores de TI con una suscripción paga también tienen la opción de filtrar y contactar a los candidatos no disponibles.",
+	"arenella-homepage-candidates-2": "Verificamos la disponibilidad de los candidatos aproximadamente cada dos semanas para garantizar su disponibilidad según su estado de LinkedIn. Los candidatos que ya no están disponibles se eliminan de los resultados de búsqueda. Su estado se revisa cada dos meses para determinar si vuelven a estar disponibles. Nuestro objetivo es reducir el tiempo que dedica a contactar a candidatos que no buscan activamente un puesto. Los reclutadores de TI con una suscripción de pago también tienen la opción de filtrar y contactar a los candidatos no disponibles.",
 	"arenella-homepage-candidates-3": "Comprobamos la disponibilidad de los candidatos aproximadamente cada dos semanas para garantizar la disponibilidad en función de su estado en LinkedIn. Una vez que\nun candidato ya no está disponible, se lo elimina de los resultados de búsqueda. Luego, se comprueba su estado cada\ndos meses para determinar si está disponible. Nuestro objetivo es reducir el tiempo que dedica a comunicarse con candidatos\nque no están buscando activamente un puesto.",
 	"arenella-homepage-candidates-4": "Los candidatos se encuentran en toda Europa y tienen derecho a trabajar. Hay candidatos para la mayoría de los tipos de funciones de TI, tanto de forma permanente como autónoma.",
 	"arenella-homepage-fees-1": "Le agradará saber que no hay márgenes ni tarifas adicionales por la colocación de un candidato. El único pago es la suscripción anual en caso de que opte por una opción de suscripción paga en lugar de una suscripción gratuita basada en créditos.",
@@ -557,7 +559,7 @@
 	"arenella-recruiter-mp-your-candidates": "Sus candidatos",
 	"arenella-recruiter-prof-box-contact-btn-send": "Enviar",
 	"arenella-recruiter-prof-box-contact-desc1": "",
-	"arenella-recruiter-prof-box-contact-desc2": "",
+	"arenella-recruiter-prof-box-contact-desc2": "Puede ver una copia de su mensaje y cualquier respuesta en su bandeja de entrada.",
 	"arenella-recruiter-prof-box-contact-failed": "",
 	"arenella-recruiter-prof-box-contact-title": "Enviar Mensaje",
 	"arenella-recruiter-prof-box-contact-titleititle": "Título",
@@ -722,7 +724,7 @@
 	"arenella-suggestions-profile-box-contact-hdr": "Mensaje del candidato",
 	"arenella-suggestions-profile-box-contact-msg-failed": "",
 	"arenella-suggestions-profile-box-contact-msg-success-1": "",
-	"arenella-suggestions-profile-box-contact-msg-success-2": "",
+	"arenella-suggestions-profile-box-contact-msg-success-2": "Puede ver una copia de su mensaje y cualquier respuesta en su bandeja de entrada.",
 	"arenella-suggestions-profile-box-contact-title": "Título",
 	"arenella-suggestions-profile-box-delete-hdr": "Confirmar eliminación",
 	"arenella-suggestions-profile-box-delete-msg": "Este perfil se eliminará y ya no será posible acceder a los datos asociados.",
@@ -794,6 +796,7 @@
 	"EU_REMOTE": "Europa - Remoto",
 	"EUROPE": "Europa",
 	"expres": "Expres",
+	"EXPRES": "Expres",
 	"failure": "Falla",
 	"FINLAND": "Finlandia",
 	"FINNISH": "Finlandés",
@@ -818,6 +821,7 @@
 	"GERMAN": "Alemán",
 	"GERMANY": "Alemania",
 	"go": "Go",
+	"GO": "Go",
 	"GREECE": "Grecia",
 	"GREEK": "Griego",
 	"Hide": "Esconder",
@@ -849,6 +853,7 @@
 	"info-item-title-to": " A ",
 	"info-item-title-years-experience": "",
 	"ios": "IOS",
+	"IOS": "Ios",
 	"IRELAND": "Irlanda",
 	"IT_RECRUITER": "Reclutador de TI",
 	"IT_RECRUITER_SHORT": "Reclutamiento",
@@ -885,7 +890,7 @@
 	"mp-left-mnu-requested-skills": "Habilidades",
 	"mp-left-mnu-start-date": "Fecha de inicio",
 	"NETHERLANDS": "Países Bajos",
-	"NETWORK_ADMINISTRATOR": "Administrador de red",
+	"NETWORK_ADMINISTRATOR": "DevOps/SysOps",
 	"NETWORK_ADMINISTRATOR_SHORT": "DevOps",
 	"new-candidate-basic": "BÁSICO",
 	"new-candidate-failure": "",
@@ -903,8 +908,10 @@
 	"newsfeed-na": "N / A",
 	"newsfeed-todays-candidates": "Candidatos de hoy",
 	"next": "Next",
+	"NEXT": "Next",
 	"no": "No",
 	"node": "Node",
+	"NODE": "Node",
 	"NORTH_AMERICA": "América del norte",
 	"NORTHERN_EUROPE": "Europa del Norte",
 	"NORTHERN_IRELAND": "Irlanda del Norte",
@@ -913,16 +920,24 @@
 	"ONE_MONTH_SUBSCRIPTION": "1 mes",
 	"PAKISTAN": "Pakistán",
 	"php": "PHP",
+	"PHP": "Php",
 	"POLAND": "Polonia",
 	"POLISH": "Polaco",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugués",
 	"product-owner": "Product Owner",
+	"PRODUCT_OWNER": "Product Owner",
 	"PROJECT_MANAGER": "Gerente de proyecto",
 	"PROJECT_MANAGER_SHORT": "PM",
 	"python": "Python",
+	"PYTHON": "Python",
 	"QA_SHORT": "QA",
+	"quick-action-text-gopro": "Sin límites - Más candidatos",
+	"quick-action-text-jobboard": "Anunciar un trabajo a los candidatos",
+	"quick-action-text-mp": "Anuncie un trabajo a los reclutadores",
+	"quick-actions-title": "Acciones Rápidas",
 	"react": "React",
+	"REACT": "React",
 	"rec-prof-country-belgium": "Bélgica",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Irlanda",
@@ -960,16 +975,19 @@
 	"rec-prof-sector-police-and-defence": "Policía y defensa",
 	"rec-prof-type-freelance-contract": "Autónomo/Contrato",
 	"rec-prof-type-permanent-payroll": "Permanente/Nómina",
-	"register-recruiter-failure": "Lamentablemente, se produjo un problema. Envíe un correo electrónico directamente a kparkings@gmail.com para obtener su cuenta.",
+	"register-recruiter-failure": "Lamentablemente, se produjo un problema. Envíe un correo electrónico directamente a admin@arenella-ict para obtener su cuenta.",
 	"register-recruiter-failure-title": "Falla",
 	"register-recruiter-success": "Su solicitud ha sido enviada. Una vez aceptada, se le enviará un correo electrónico con sus datos de acceso.",
 	"register-recruiter-success-title": "Éxito",
 	"REPUBLIC_OF_IRELAND": "Irlanda",
 	"ROMANIA": "Rumania",
 	"ROMANIAN": "Rumano",
+	"RUBY": "Ruby",
 	"ruby-on-rails": "Ruby On Rails",
+	"RUBY_ON_RAILS": "Ruby On Rails",
 	"RUSSIAN": "Ruso",
 	"rust": "Rust",
+	"RUST": "Rust",
 	"saved-candidate-no-longer-available": "El candidato ya no está disponible",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
@@ -1028,6 +1046,7 @@
 	"SWEDISH": "Sueco",
 	"SWITZERLAND": "Suiza",
 	"test-manager": "Test Manager",
+	"TEST_MANAGER": "Test Manager",
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "",
 	"TURKEY": "Pavo",
@@ -1041,6 +1060,7 @@
 	"URDU": "Urdu",
 	"US": "EE.UU",
 	"vue": "Vue",
+	"VUE": "Vue",
 	"WEB_DEV": "Desarrollador web",
 	"WEB_SHORT": "Web",
 	"WESTERN_EUROPE": "Europa occidental",
