--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -1,6 +1,8 @@
 {
 	"android": "Android",
+	"ANDROID": "Android",
 	"angular": "Angular",
+	"ANGULAR": "Angular",
 	"ARCHITECT": "Architecte logiciel",
 	"ARCHITECT_SHORT": "Architecte",
 	"arenella-accounts-menu-availability": "Disponibilité",
@@ -181,7 +183,7 @@
 	"arenella-faqs-q11-answer-summary": "Vous pouvez filtrer sur les candidats qui parlent la langue que vous recherchez.",
 	"arenella-faqs-q11-question": "Quelles langues parlent les candidats",
 	"arenella-homepage-candidates-1": "Les candidats ont soit téléchargé leur CV sur le site, soit donné leur autorisation dans le but d&#39;être contactés par des recruteurs. Nos candidats sont ouverts à travailler avec des recruteurs et recherchent activement un nouveau rôle via une agence de recrutement.",
-	"arenella-homepage-candidates-2": "Nous vérifions la disponibilité des candidats environ toutes les deux semaines pour garantir la disponibilité en fonction de leur statut LinkedIn. Les candidats qui ne sont plus disponibles sont supprimés des résultats de recherche. Leur statut est ensuite vérifié tous les deux mois pour déterminer s'ils sont redevenus disponibles. Notre objectif est de réduire vos dépenses en contact avec des candidats qui ne recherchent pas activement un poste. Les recruteurs informatiques disposant d'un abonnement payant ont également la possibilité de filtrer et de contacter les candidats indisponibles.",
+	"arenella-homepage-candidates-2": "Nous vérifions la disponibilité des candidats environ toutes les deux semaines afin de garantir leur disponibilité en fonction de leur statut LinkedIn. Les candidats qui ne sont plus disponibles sont supprimés des résultats de recherche. Leur statut est ensuite vérifié tous les deux mois afin de déterminer s'ils sont à nouveau disponibles. Notre objectif est de réduire le temps passé à contacter les candidats qui ne recherchent pas activement un poste. Les recruteurs informatiques disposant d'un abonnement payant peuvent également filtrer et contacter les candidats indisponibles.",
 	"arenella-homepage-candidates-3": "Nous vérifions la disponibilité des candidats environ toutes les deux semaines pour garantir la disponibilité en fonction de leur statut LinkedIn. Lorsqu&#39;un candidat n&#39;est plus disponible, il est supprimé des résultats de recherche. Leur statut est ensuite vérifié tous les deux mois pour déterminer s&#39;ils sont devenus disponibles. Notre objectif est de réduire vos dépenses en contact avec des candidats qui ne recherchent pas activement un poste.",
 	"arenella-homepage-candidates-4": "Les candidats sont basés dans toute l'Europe et ont le droit de travailler. Il existe des candidats pour la plupart des types de fonctions informatiques, en tant que permanents ou indépendants. ",
 	"arenella-homepage-fees-1": "Vous serez heureux d’apprendre qu’il n’y a pas de marges ni de frais supplémentaires pour placer un candidat. Le seul paiement est l'abonnement annuel dans le cas où vous optez pour une option d'abonnement payante plutôt que gratuite basée sur un crédit.",
@@ -794,6 +796,7 @@
 	"EU_REMOTE": "Europe - À distance",
 	"EUROPE": "L'Europe",
 	"expres": "Expres",
+	"EXPRES": "Expres",
 	"failure": "Échec",
 	"FINLAND": "Finlande",
 	"FINNISH": "Finlandais",
@@ -818,6 +821,7 @@
 	"GERMAN": "Allemand",
 	"GERMANY": "Allemagne",
 	"go": "Go",
+	"GO": "Go",
 	"GREECE": "Grèce",
 	"GREEK": "Grec",
 	"Hide": "Cacher",
@@ -849,6 +853,7 @@
 	"info-item-title-to": " a ",
 	"info-item-title-years-experience": "Années d'expérience",
 	"ios": "IOS",
+	"IOS": "Ios",
 	"IRELAND": "Irlande",
 	"IT_RECRUITER": "Recruteur informatique",
 	"IT_RECRUITER_SHORT": "Recrutement",
@@ -885,7 +890,7 @@
 	"mp-left-mnu-requested-skills": "Compétences",
 	"mp-left-mnu-start-date": "Date de début",
 	"NETHERLANDS": "Les Pays-Bas",
-	"NETWORK_ADMINISTRATOR": "Administrateur réseau",
+	"NETWORK_ADMINISTRATOR": "DevOps/SysOps",
 	"NETWORK_ADMINISTRATOR_SHORT": "DevOps",
 	"new-candidate-basic": "Basique",
 	"new-candidate-failure": "Impossible d'ajouter un candidat",
@@ -903,8 +908,10 @@
 	"newsfeed-na": "Na",
 	"newsfeed-todays-candidates": "Candidats du jour",
 	"next": "Next",
+	"NEXT": "Next",
 	"no": "Non",
 	"node": "Node",
+	"NODE": "Node",
 	"NORTH_AMERICA": "Amérique du Nord",
 	"NORTHERN_EUROPE": "Europe du Nord",
 	"NORTHERN_IRELAND": "Irlande du Nord",
@@ -913,16 +920,24 @@
 	"ONE_MONTH_SUBSCRIPTION": "1 mois",
 	"PAKISTAN": "Pakistan",
 	"php": "PHP",
+	"PHP": "Php",
 	"POLAND": "Pologne",
 	"POLISH": "Polonais",
 	"PORTUGAL": "Le Portugal",
 	"PORTUGUESE": "Portugais",
 	"product-owner": "Product Owner",
+	"PRODUCT_OWNER": "Product Owner",
 	"PROJECT_MANAGER": "Chef de projet",
 	"PROJECT_MANAGER_SHORT": "PM",
 	"python": "Python",
+	"PYTHON": "Python",
 	"QA_SHORT": "QA",
+	"quick-action-text-gopro": "Aucune limite - Plus de candidats",
+	"quick-action-text-jobboard": "Annoncer un poste aux candidats",
+	"quick-action-text-mp": "Publier une offre d'emploi auprès des recruteurs",
+	"quick-actions-title": "Actions Rapides",
 	"react": "React",
+	"REACT": "React",
 	"rec-prof-country-belgium": "Belgique",
 	"rec-prof-country-europe": "L'Europe",
 	"rec-prof-country-ireland": "Irlande",
@@ -960,16 +975,19 @@
 	"rec-prof-sector-police-and-defence": "Police et Défense",
 	"rec-prof-type-freelance-contract": "Indépendant/Contrat",
 	"rec-prof-type-permanent-payroll": "Permanent/Paie",
-	"register-recruiter-failure": "Malheureusement, il y a eu un problème. Veuillez envoyer un e-mail à kparkings@gmail.com directement pour votre compte",
+	"register-recruiter-failure": "Malheureusement, il y a eu un problème. Veuillez envoyer un e-mail à admin@arenella-ict directement pour votre compte",
 	"register-recruiter-failure-title": "Échec",
 	"register-recruiter-success": "Votre requête à bien été envoyée. Une fois accepté, un e-mail vous sera envoyé avec vos informations de connexion.",
 	"register-recruiter-success-title": "Succès",
 	"REPUBLIC_OF_IRELAND": "Irlande",
 	"ROMANIA": "Roumanie",
 	"ROMANIAN": "Roumain",
+	"RUBY": "Ruby",
 	"ruby-on-rails": "Ruby On Rails",
+	"RUBY_ON_RAILS": "Ruby On Rails",
 	"RUSSIAN": "Russe",
 	"rust": "Rust",
+	"RUST": "Rust",
 	"saved-candidate-no-longer-available": "Le candidat n'est plus disponible",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
@@ -1028,6 +1046,7 @@
 	"SWEDISH": "Suédois",
 	"SWITZERLAND": "Suisse",
 	"test-manager": "Test Manager",
+	"TEST_MANAGER": "Test Manager",
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 mois",
 	"TURKEY": "Dinde",
@@ -1041,6 +1060,7 @@
 	"URDU": "Ourdou",
 	"US": "États-Unis",
 	"vue": "Vue",
+	"VUE": "Vue",
 	"WEB_DEV": "Développeur Web",
 	"WEB_SHORT": "Web",
 	"WESTERN_EUROPE": "Europe de l'Ouest",
