--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -1,6 +1,8 @@
 {
 	"android": "Android",
+	"ANDROID": "Android",
 	"angular": "Angular",
+	"ANGULAR": "Angular",
 	"ARCHITECT": "Architetto del software",
 	"ARCHITECT_SHORT": "Architetto",
 	"arenella-accounts-menu-availability": "Disponibilità",
@@ -181,7 +183,7 @@
 	"arenella-faqs-q11-answer-summary": "Puoi filtrare in base ai candidati che parlano la lingua che stai cercando.",
 	"arenella-faqs-q11-question": "Quali lingue parlano i candidati?",
 	"arenella-homepage-candidates-1": "I candidati hanno caricato il loro CV sul sito o hanno dato il permesso affinché ciò accadesse, con l'intenzione di essere contattati dai reclutatori. I nostri candidati sono aperti a lavorare con i reclutatori e cercano attivamente un nuovo ruolo tramite un'agenzia di reclutamento.",
-	"arenella-homepage-candidates-2": "Controlliamo la disponibilità dei candidati circa ogni due settimane per garantirne la disponibilità in base al loro stato su LinkedIn. I candidati non più disponibili vengono rimossi dai risultati di ricerca. Il loro stato viene quindi controllato ogni due mesi per determinare se sono nuovamente disponibili. Puntiamo a ridurre le tue spese per contattare candidati che non stanno cercando attivamente un ruolo. I Recruiter IT con un abbonamento a pagamento hanno anche la possibilità di filtrare e contattare i candidati non disponibili.",
+	"arenella-homepage-candidates-2": "Verifichiamo la disponibilità dei candidati circa ogni due settimane per garantirne la disponibilità in base al loro stato su LinkedIn. I candidati non più disponibili vengono rimossi dai risultati di ricerca. Il loro stato viene poi controllato ogni due mesi per determinare se sono nuovamente disponibili. Il nostro obiettivo è ridurre il tempo dedicato a contattare i candidati che non sono attivamente alla ricerca di un ruolo. I recruiter IT con un abbonamento a pagamento hanno anche la possibilità di filtrare e contattare i candidati non disponibili.",
 	"arenella-homepage-candidates-3": "Controlliamo la disponibilità dei candidati circa ogni due settimane per garantirne la disponibilità in base al loro stato su LinkedIn. Una volta che un candidato non è più disponibile, viene rimosso dai risultati di ricerca. Il suo stato viene quindi controllato ogni due mesi per determinare se è diventato disponibile. Puntiamo a ridurre il tempo impiegato per contattare i candidati che non sono attivamente alla ricerca di un ruolo.",
 	"arenella-homepage-candidates-4": "I candidati sono basati in tutta Europa e hanno il diritto di lavorare. Ci sono candidati per la maggior parte dei tipi di funzioni IT sia a tempo indeterminato che freelance.",
 	"arenella-homepage-fees-1": "Sarai felice di sapere che non ci sono margini o commissioni aggiuntive per collocare un candidato. L'unico pagamento è l'abbonamento annuale nel caso in cui tu scelga un'opzione di abbonamento a pagamento, anziché un abbonamento basato sul credito gratuito.",
@@ -422,7 +424,7 @@
 	"arenella-recruiter-listing-btn-add-job": "Aggiungi ruolo",
 	"arenella-recruiter-listing-btn-back": "Indietro",
 	"arenella-recruiter-listing-btn-confirm": "Confermare",
-	"arenella-recruiter-listing-btn-create-from-spec": "Crea da specifiche",
+	"arenella-recruiter-listing-btn-create-from-spec": "Crea da spec",
 	"arenella-recruiter-listing-btn-delete": "Elimina",
 	"arenella-recruiter-listing-btn-edit": "Modificare",
 	"arenella-recruiter-listing-btn-publicity": "Condividere",
@@ -478,7 +480,7 @@
 	"arenella-recruiter-mp-add-both": "Entrambi",
 	"arenella-recruiter-mp-add-btn-add": "Aggiungere",
 	"arenella-recruiter-mp-add-btn-back": "Indietro",
-	"arenella-recruiter-mp-add-btn-create-by-spec": "Crea da specifiche",
+	"arenella-recruiter-mp-add-btn-create-by-spec": "Crea da spec",
 	"arenella-recruiter-mp-add-btn-publish": "Pubblicare",
 	"arenella-recruiter-mp-add-btn-update": "Aggiornamento",
 	"arenella-recruiter-mp-add-closing-date": "Data di chiusura della posizione",
@@ -685,7 +687,7 @@
 	"arenella-suggestions-box-spec-text": "Incolla testo",
 	"arenella-suggestions-btn-copy": "Copia",
 	"arenella-suggestions-btn-create-alert": "Avviso e-mail",
-	"arenella-suggestions-btn-filter-by-spec": "Filtra per specifiche",
+	"arenella-suggestions-btn-filter-by-spec": "Filtra per spec",
 	"arenella-suggestions-btn-manage-alert": "Gestisci avvisi",
 	"arenella-suggestions-btn-my-candidates": "I miei candidati",
 	"arenella-suggestions-btn-reset": "Ripristina",
@@ -794,6 +796,7 @@
 	"EU_REMOTE": "Europa - Remoto",
 	"EUROPE": "Europa",
 	"expres": "Expres",
+	"EXPRES": "Expres",
 	"failure": "Fallimento",
 	"FINLAND": "Finlandia",
 	"FINNISH": "Finlandese",
@@ -818,6 +821,7 @@
 	"GERMAN": "Tedesco",
 	"GERMANY": "Germania",
 	"go": "Go",
+	"GO": "Go",
 	"GREECE": "Grecia",
 	"GREEK": "Greco",
 	"Hide": "Nascondere",
@@ -849,6 +853,7 @@
 	"info-item-title-to": " a",
 	"info-item-title-years-experience": "Anni di esperienza",
 	"ios": "IOS",
+	"IOS": "Ios",
 	"IRELAND": "Irlanda",
 	"IT_RECRUITER": "Reclutatore informatico",
 	"IT_RECRUITER_SHORT": "Reclutamento",
@@ -885,7 +890,7 @@
 	"mp-left-mnu-requested-skills": "Competenze",
 	"mp-left-mnu-start-date": "Data d'inizio",
 	"NETHERLANDS": "Olanda",
-	"NETWORK_ADMINISTRATOR": "Amministratore di rete",
+	"NETWORK_ADMINISTRATOR": "DevOps/SysOps",
 	"NETWORK_ADMINISTRATOR_SHORT": "DevOps",
 	"new-candidate-basic": "Di base",
 	"new-candidate-failure": "Impossibile aggiungere il candidato",
@@ -903,8 +908,10 @@
 	"newsfeed-na": "N / A",
 	"newsfeed-todays-candidates": "I candidati di oggi",
 	"next": "Next",
+	"NEXT": "Next",
 	"no": "No",
 	"node": "Node",
+	"NODE": "Node",
 	"NORTH_AMERICA": "America del Nord",
 	"NORTHERN_EUROPE": "Europa settentrionale",
 	"NORTHERN_IRELAND": "Irlanda del Nord",
@@ -913,16 +920,24 @@
 	"ONE_MONTH_SUBSCRIPTION": "1 mese",
 	"PAKISTAN": "Pakistan",
 	"php": "PHP",
+	"PHP": "Php",
 	"POLAND": "Polonia",
 	"POLISH": "Polacco",
 	"PORTUGAL": "Portogallo",
 	"PORTUGUESE": "Portoghese",
 	"product-owner": "Product Owner",
+	"PRODUCT_OWNER": "Product Owner",
 	"PROJECT_MANAGER": "Responsabile del progetto",
 	"PROJECT_MANAGER_SHORT": "PM",
 	"python": "Python",
+	"PYTHON": "Python",
 	"QA_SHORT": "QA",
+	"quick-action-text-gopro": "Nessun limite - Più candidati",
+	"quick-action-text-jobboard": "Pubblica un annuncio di ruolo per i candidati",
+	"quick-action-text-mp": "Pubblica un annuncio di lavoro per i reclutatori",
+	"quick-actions-title": "Azioni Rapide",
 	"react": "React",
+	"REACT": "React",
 	"rec-prof-country-belgium": "Belgio",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Irlanda",
@@ -960,16 +975,19 @@
 	"rec-prof-sector-police-and-defence": "Polizia e Difesa",
 	"rec-prof-type-freelance-contract": "Libero professionista/Contratto",
 	"rec-prof-type-permanent-payroll": "Permanente/Libro paga",
-	"register-recruiter-failure": "Purtroppo si è verificato un problema. Invia un'e-mail direttamente a kparkings@gmail.com per il tuo account",
+	"register-recruiter-failure": "Purtroppo si è verificato un problema. Invia un'e-mail direttamente a admin@arenella-ict per il tuo account",
 	"register-recruiter-failure-title": "Fallimento",
 	"register-recruiter-success": "La tua richiesta è stata inoltrata. Una volta accettata, ti verrà inviata un'e-mail con i tuoi dati di accesso.",
 	"register-recruiter-success-title": "Successo",
 	"REPUBLIC_OF_IRELAND": "Irlanda",
 	"ROMANIA": "Romania",
 	"ROMANIAN": "Rumeno",
+	"RUBY": "Ruby",
 	"ruby-on-rails": "Ruby On Rails",
+	"RUBY_ON_RAILS": "Ruby On Rails",
 	"RUSSIAN": "Russo",
 	"rust": "Rust",
+	"RUST": "Rust",
 	"saved-candidate-no-longer-available": "Candidato non più disponibile",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
@@ -1028,6 +1046,7 @@
 	"SWEDISH": "Svedese",
 	"SWITZERLAND": "Svizzera",
 	"test-manager": "Test Manager",
+	"TEST_MANAGER": "Test Manager",
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 mesi",
 	"TURKEY": "Tacchino",
@@ -1041,6 +1060,7 @@
 	"URDU": "Italiano:",
 	"US": "U.S.A.",
 	"vue": "Vue",
+	"VUE": "Vue",
 	"WEB_DEV": "Sviluppatore Web",
 	"WEB_SHORT": "Web",
 	"WESTERN_EUROPE": "Europa occidentale",
