--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -1,6 +1,8 @@
 {
 	"android": "Android",
+	"ANDROID": "Android",
 	"angular": "Angular",
+	"ANGULAR": "Angular",
 	"ARCHITECT": "Softwarearchitect",
 	"ARCHITECT_SHORT": "Architect",
 	"arenella-accounts-menu-availability": "Beschikbaarheid",
@@ -181,7 +183,7 @@
 	"arenella-faqs-q11-answer-summary": "U kunt filteren op kandidaten die de taal spreken waarnaar u op zoek bent.",
 	"arenella-faqs-q11-question": "Welke talen spreken de kandidaten",
 	"arenella-homepage-candidates-1": "Kandidaten hebben hun CV naar de site geüpload of hebben daar toestemming voor gegeven met de bedoeling dat recruiters contact met hen opnemen. Onze kandidaten staan ​​open voor samenwerking met recruiters en zijn actief op zoek naar een nieuwe rol via een recruitmentbureau.",
-	"arenella-homepage-candidates-2": "We controleren de beschikbaarheid van kandidaten ongeveer elke twee weken om de beschikbaarheid te garanderen op basis van hun LinkedIn-status. Kandidaten die niet meer beschikbaar zijn, worden uit de zoekresultaten verwijderd. Vervolgens wordt elke twee maanden gecontroleerd of ze weer beschikbaar zijn. Wij streven ernaar om uw uitgaven aan contact met kandidaten die niet actief op zoek zijn naar een functie, te verminderen. IT Recruiters met een betaald abonnement hebben ook de mogelijkheid om te filteren en contact op te nemen met de niet-beschikbare kandidaten.",
+	"arenella-homepage-candidates-2": "We controleren de beschikbaarheid van kandidaten ongeveer elke twee weken om beschikbaarheid te garanderen op basis van hun LinkedIn-status. Kandidaten die niet langer beschikbaar zijn, worden uit de zoekresultaten verwijderd. Hun status wordt vervolgens elke twee maanden gecontroleerd om te bepalen of ze weer beschikbaar zijn. We streven ernaar om de tijd die u besteedt aan het contacteren van kandidaten die niet actief op zoek zijn naar een functie, te verkorten. IT-recruiters met een betaald abonnement hebben ook de mogelijkheid om te filteren op en contact op te nemen met de niet-beschikbare kandidaten.",
 	"arenella-homepage-candidates-3": "We controleren de beschikbaarheid van kandidaten ongeveer elke twee weken om de beschikbaarheid te garanderen op basis van hun LinkedIn-status. Zodra een kandidaat niet meer beschikbaar is, wordt deze uit de zoekresultaten verwijderd. Vervolgens wordt elke twee maanden hun status gecontroleerd om te bepalen of ze beschikbaar zijn gekomen. Wij streven ernaar om de kosten die u besteedt aan het contacteren van kandidaten die niet actief op zoek zijn naar een functie, te verminderen.",
 	"arenella-homepage-candidates-4": "Kandidaten zijn gevestigd in heel Europa en hebben het recht om te werken. Voor de meeste soorten IT-functies zijn er kandidaten op zowel vaste als freelance basis. ",
 	"arenella-homepage-fees-1": "U zult blij zijn te horen dat er geen extra marges of kosten verbonden zijn aan het plaatsen van een kandidaat. De enige betaling is het jaarabonnement als u kiest voor een betaalde, in plaats van een gratis, op krediet gebaseerde abonnementsoptie.",
@@ -794,6 +796,7 @@
 	"EU_REMOTE": "Europa - Remote",
 	"EUROPE": "Europa",
 	"expres": "Expres",
+	"EXPRES": "Expres",
 	"failure": "Fout",
 	"FINLAND": "Finland",
 	"FINNISH": "Fins",
@@ -818,6 +821,7 @@
 	"GERMAN": "Duitse",
 	"GERMANY": "Duitsland",
 	"go": "Go",
+	"GO": "Go",
 	"GREECE": "Griekenland",
 	"GREEK": "Grieks",
 	"Hide": "Verbergen",
@@ -849,6 +853,7 @@
 	"info-item-title-to": " tot ",
 	"info-item-title-years-experience": "Jaren ervaring",
 	"ios": "IOS",
+	"IOS": "Ios",
 	"IRELAND": "Ierland",
 	"IT_RECRUITER": "IT-recruiter",
 	"IT_RECRUITER_SHORT": "Werving",
@@ -885,7 +890,7 @@
 	"mp-left-mnu-requested-skills": "Vaardigheden",
 	"mp-left-mnu-start-date": "Startdatum",
 	"NETHERLANDS": "Nederland",
-	"NETWORK_ADMINISTRATOR": "Netwerkbeheerder",
+	"NETWORK_ADMINISTRATOR": "DevOps/SysOps",
 	"NETWORK_ADMINISTRATOR_SHORT": "DevOps",
 	"new-candidate-basic": "Basis",
 	"new-candidate-failure": "Kan kandidaat niet toevoegen",
@@ -903,8 +908,10 @@
 	"newsfeed-na": "Na",
 	"newsfeed-todays-candidates": "De kandidaten van vandaag",
 	"next": "Next",
+	"NEXT": "Next",
 	"no": "Nee",
 	"node": "Node",
+	"NODE": "Node",
 	"NORTH_AMERICA": "Noord Amerika",
 	"NORTHERN_EUROPE": "Noord-Europa",
 	"NORTHERN_IRELAND": "Noord-Ierland",
@@ -913,16 +920,24 @@
 	"ONE_MONTH_SUBSCRIPTION": "1 maand",
 	"PAKISTAN": "Pakistan",
 	"php": "PHP",
+	"PHP": "Php",
 	"POLAND": "Polen",
 	"POLISH": "Pools",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugees",
 	"product-owner": "Product Owner",
+	"PRODUCT_OWNER": "Product Owner",
 	"PROJECT_MANAGER": "Projectleider",
 	"PROJECT_MANAGER_SHORT": "PM",
 	"python": "Python",
+	"PYTHON": "Python",
 	"QA_SHORT": "QA",
+	"quick-action-text-gopro": "Geen downloadlimieten - Meer kandidaten",
+	"quick-action-text-jobboard": "Adverteer een functie bij kandidaten",
+	"quick-action-text-mp": "Adverteer een vacature bij recruiters",
+	"quick-actions-title": "Snelle Acties",
 	"react": "React",
+	"REACT": "React",
 	"rec-prof-country-belgium": "België",
 	"rec-prof-country-europe": "Europa",
 	"rec-prof-country-ireland": "Ierland",
@@ -960,16 +975,19 @@
 	"rec-prof-sector-police-and-defence": "Politie en Defensie",
 	"rec-prof-type-freelance-contract": "Freelance/contract",
 	"rec-prof-type-permanent-payroll": "Vast/salaris",
-	"register-recruiter-failure": "Helaas was er een probleem. Stuur een e-mail naar kparkings@gmail.com rechtstreeks voor uw account",
+	"register-recruiter-failure": "Helaas was er een probleem. Stuur een e-mail naar admin@arenella-ict rechtstreeks voor uw account",
 	"register-recruiter-failure-title": "Fout",
 	"register-recruiter-success": "Uw aanvraag is ingediend. Na acceptatie wordt er een e-mail verzonden met uw inloggegevens.",
 	"register-recruiter-success-title": "Succes",
 	"REPUBLIC_OF_IRELAND": "Ierland",
 	"ROMANIA": "Roemenië",
 	"ROMANIAN": "Roemeense",
+	"RUBY": "Ruby",
 	"ruby-on-rails": "Ruby On Rails",
+	"RUBY_ON_RAILS": "Ruby On Rails",
 	"RUSSIAN": "Russisch",
 	"rust": "Rust",
+	"RUST": "Rust",
 	"saved-candidate-no-longer-available": "Kandidaat niet langer beschikbaar",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
@@ -1028,6 +1046,7 @@
 	"SWEDISH": "Zweeds",
 	"SWITZERLAND": "Zwitserland",
 	"test-manager": "Test Manager",
+	"TEST_MANAGER": "Test Manager",
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 maanden",
 	"TURKEY": "Kalkoen",
@@ -1041,6 +1060,7 @@
 	"URDU": "Urdu",
 	"US": "VS",
 	"vue": "Vue",
+	"VUE": "Vue",
 	"WEB_DEV": "Webontwikkelaar",
 	"WEB_SHORT": "Web",
 	"WESTERN_EUROPE": "West-Europa",
